修改用户登录界面样式

--- a/uni-mall/pages/auth/login/accountLogin.scss
+++ b/uni-mall/pages/auth/login/accountLogin.scss
@@ -79,6 +79,17 @@ image {
   padding: 8rpx;
   margin-top: 80rpx;
 }
+.guest-btn {
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
+  background-color: #0ab906;
+  color: #fff;
+  border-radius: 6rpx;
+  font-size: 26rpx;
+  padding: 8rpx;
+  margin-top: 30rpx;
+}
 .to-idx-btn {
   width: 90%;
   margin: 0 auto;
