--- a/uni-mall/pages/auth/login/accountLogin.scss
+++ b/uni-mall/pages/auth/login/accountLogin.scss
@@ -48,12 +48,27 @@
     padding-right: 0;
   }
 }
+.right1 {
+  width: 660rpx;
+  height: 90rpx;
+  background: #F8F9FD;
+  border-radius: 45rpx;
+  line-height: 90rpx;
+  display: flex;
+  align-items: center;
+  //justify-content: space-between;
+  padding-left: 30rpx;
+  font-size: 30rpx;
+  font-weight: 400;
+  color: #999999;
 
-.con {
-  background: #fff;
-  height: 100%;
-  margin-top: 50px;
+  input {
+    font-size: 34rpx;
+    width: 100%;
+    display: inline-block;
+  }
 }
+
 image {
   display: block;
   width: 150rpx;
@@ -101,29 +116,7 @@ image {
   padding: 8rpx;
   margin-top: 30rpx;
 }
-.form-title {
-  width: 100%;
-  margin-bottom: 50rpx;
-  font-size: 32rpx;
-  text-align: center;
-  color: #00a0e9;
-}
-.item {
-  display: block;
-  margin-bottom: 30rpx;
-}
-.account {
-  display: flex;
-  background: #f8f8f8;
-  padding: 15rpx;
-  box-sizing: border-box;
-  font-size: 26rpx;
-  align-items: center;
-  input {
-    padding-left: 20rpx;
-    width: 75%;
-  }
-}
+
 button {
   &::after {
     border: 0 !important;
